[gd_scene load_steps=19 format=2]

[ext_resource path="res://dice/dice-bank/BankDie.tscn" type="PackedScene" id=1]
[ext_resource path="res://dice/dice-bank/BankDieUsedOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://dice/dice-bank/BankDieSelectedOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fade.tscn" type="PackedScene" id=4]
[ext_resource path="res://map/map_area.gd" type="Script" id=5]
[ext_resource path="res://dice/DieFaceInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://dice/dice-bank/dice_bank_view_only.gd" type="Script" id=7]
[ext_resource path="res://map/PathStart.tscn" type="PackedScene" id=8]
[ext_resource path="res://dice/dice-bank/lmb.png" type="Texture" id=9]
[ext_resource path="res://dice/dice-bank/rmb.png" type="Texture" id=10]
[ext_resource path="res://combat/health_icon.png" type="Texture" id=11]
[ext_resource path="res://fonts/mukta/Mukta_16.tres" type="DynamicFontData" id=12]
[ext_resource path="res://fonts/mukta/Mukta_8.tres" type="DynamicFontData" id=13]
[ext_resource path="res://map/map.gd" type="Script" id=14]
[ext_resource path="res://map/PathOne.tscn" type="PackedScene" id=15]
[ext_resource path="res://map/PlayerNode.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 0.431373 )
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 6
outline_size = 1
outline_color = Color( 0, 0, 0, 0.431373 )
font_data = ExtResource( 13 )

[node name="Map" type="Node2D"]
script = ExtResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerInfo" type="Control" parent="CanvasLayer"]
anchor_top = 0.222
anchor_right = 0.062
anchor_bottom = 0.356
margin_top = 0.0799942
margin_right = 0.319969
margin_bottom = -0.160004
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="CanvasLayer/PlayerInfo"]
anchor_left = 0.125
anchor_right = 0.875
anchor_bottom = 0.588
margin_top = 2.0
margin_right = -3.8147e-06
margin_bottom = 1.98801
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PlayerInfo/Health"]
anchor_left = 0.567
anchor_top = -0.071
anchor_right = 1.167
anchor_bottom = 0.935
margin_left = -0.0100002
margin_top = -0.396948
margin_right = -0.0100021
margin_bottom = -0.587282
custom_fonts/font = SubResource( 1 )
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIcon" type="TextureRect" parent="CanvasLayer/PlayerInfo/Health"]
anchor_top = 0.1
anchor_right = 0.4
anchor_bottom = 0.818
margin_top = -0.2
margin_right = 16.0
margin_bottom = 16.004
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Statuses" type="HBoxContainer" parent="CanvasLayer/PlayerInfo"]
anchor_top = -0.354
anchor_right = 9.6
anchor_bottom = -0.021
margin_top = -1.008
margin_right = 384.0
margin_bottom = 15.008
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceBank" type="NinePatchRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 0.244
margin_bottom = 0.159996
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorBG" type="ColorRect" parent="CanvasLayer/DiceBank"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -8.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxDice" type="HBoxContainer" parent="CanvasLayer/DiceBank"]
anchor_top = 0.077
anchor_right = 1.0
anchor_bottom = 0.808
margin_top = -0.00800037
margin_right = 213.0
margin_bottom = 24.968
rect_scale = Vector2( 0.75, 0.75 )
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxDice" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDice"]
margin_left = 26.0
margin_right = 214.0
margin_bottom = 92.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice" instance=ExtResource( 1 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice" instance=ExtResource( 1 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice2" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDice"]
margin_left = 230.0
margin_right = 418.0
margin_bottom = 92.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice2" instance=ExtResource( 1 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice2" instance=ExtResource( 1 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice2" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice3" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDice"]
margin_left = 434.0
margin_right = 622.0
margin_bottom = 92.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice3" instance=ExtResource( 1 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice3" instance=ExtResource( 1 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice3" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice4" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDice"]
margin_left = 638.0
margin_right = 826.0
margin_bottom = 92.0
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice4" instance=ExtResource( 1 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice4" instance=ExtResource( 1 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDice/VBoxDice4" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="HBoxDiceSelectedOverlay" type="HBoxContainer" parent="CanvasLayer/DiceBank"]
anchor_top = 0.077
anchor_right = 1.0
anchor_bottom = 0.817
margin_top = -0.00800037
margin_right = 213.0
margin_bottom = 26.032
rect_scale = Vector2( 0.75, 0.75 )
mouse_filter = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxDice" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay"]
margin_left = 26.0
margin_right = 214.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice" instance=ExtResource( 3 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice" instance=ExtResource( 3 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice" instance=ExtResource( 3 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice2" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay"]
margin_left = 230.0
margin_right = 418.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice2" instance=ExtResource( 3 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice2" instance=ExtResource( 3 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice2" instance=ExtResource( 3 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice3" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay"]
margin_left = 434.0
margin_right = 622.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice3" instance=ExtResource( 3 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice3" instance=ExtResource( 3 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice3" instance=ExtResource( 3 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice4" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay"]
margin_left = 638.0
margin_right = 826.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice4" instance=ExtResource( 3 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice4" instance=ExtResource( 3 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceSelectedOverlay/VBoxDice4" instance=ExtResource( 3 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="HBoxDiceUsedOverlay" type="HBoxContainer" parent="CanvasLayer/DiceBank"]
anchor_top = 0.077
anchor_right = 1.0
anchor_bottom = 0.817
margin_top = -0.00800037
margin_right = 213.0
margin_bottom = 26.032
rect_scale = Vector2( 0.75, 0.75 )
mouse_filter = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxDice" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay"]
margin_left = 26.0
margin_right = 214.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice" instance=ExtResource( 2 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice" instance=ExtResource( 2 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice" instance=ExtResource( 2 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice2" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay"]
margin_left = 230.0
margin_right = 418.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice2" instance=ExtResource( 2 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice2" instance=ExtResource( 2 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice2" instance=ExtResource( 2 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice3" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay"]
margin_left = 434.0
margin_right = 622.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice3" instance=ExtResource( 2 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice3" instance=ExtResource( 2 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice3" instance=ExtResource( 2 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="VBoxDice4" type="VBoxContainer" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay"]
margin_left = 638.0
margin_right = 826.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = -2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die001" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice4" instance=ExtResource( 2 )]

[node name="Die002" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice4" instance=ExtResource( 2 )]
margin_top = 30.0
margin_bottom = 62.0

[node name="Die003" parent="CanvasLayer/DiceBank/HBoxDiceUsedOverlay/VBoxDice4" instance=ExtResource( 2 )]
margin_top = 60.0
margin_bottom = 92.0

[node name="LMB" type="Control" parent="CanvasLayer/DiceBank"]
visible = false
anchor_left = 0.026
anchor_right = 0.128
anchor_bottom = 0.182
margin_left = -2.224
margin_right = -1.872
margin_bottom = -0.0159988
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DiceBank/LMB"]
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/DiceBank/LMB"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 0.937
margin_top = 4.0
margin_bottom = 0.00799942
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "SELECT DIE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RMB" type="Control" parent="CanvasLayer/DiceBank"]
visible = false
anchor_left = 0.026
anchor_right = 0.128
anchor_bottom = 0.182
margin_left = 55.776
margin_right = 56.128
margin_bottom = -0.0159988
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/DiceBank/RMB"]
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/DiceBank/RMB"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 0.937
margin_top = 4.0
margin_bottom = 0.00799942
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "REMOVE DIE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DieFaceInfo" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="Fade" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="MapArea" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="PlayerNode" parent="MapArea" instance=ExtResource( 16 )]
position = Vector2( 320, 240 )
z_index = 1

[node name="PathStart" parent="MapArea" instance=ExtResource( 8 )]
position = Vector2( 320, 240 )

[node name="PathOne" parent="MapArea" instance=ExtResource( 15 )]
